[package]
name = "proj"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
solana-client = "2.2.2"
solana-sdk = "2.2.2"
tokio = { version = "1.45.1", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
spl-token = "8.0.0"
base64 = "0.22.1"
bs58 = "0.5.1"
solana-system-program = "2.3.2"
